@@ -23,7 +23,9 @@ http://www.gnu.org/licenses/ or write to the Free Software Foundation, Inc.,
 Changes from versions 4.0.* to version 4.1.0:
 - The "..." release.
 - Improved __GMP_CC and __GMP_CFLAGS retrieval (in particular for MS Windows).
+- Changed __float128 to the standard type _Float128.
 - Optimized the tuning parameters for various architectures.
+- Improved test coverage to XXX% of code.
 - Bug fixes.
 - New: optional "make check-exported-symbols", mainly for the MPFR developers
   and binary distributions, to check that MPFR does not define symbols with a
